@@ -47,6 +47,7 @@
   <editor_height value="400"/>
   <directionality value="ltr"/>
   <autoresize value="False"/>
+  <autoresize_bottom_margin value="40"/>
   <tablestyles>
    <element value="Subdued grid|plain"/>
    <element value="Invisible grid|invisible"/>
