@@ -21,6 +21,8 @@ HISTORY
 - Changed toolbar save user feedback from alert message to blinking field border
   (idea by Danny)
 - Removed save button when creating a new object
+- Added bottom margin of the editor window when auto resize is enabled to the
+  control panel.
 - Added condition to javascript files in portal registery
 - Fixed IE6 and 7 loading and dialog bugs
 - Fixed toolbar/statusbar backgroundcolor bug in IE6 and 7
